--- a/main/templates/main/navbar.html
+++ b/main/templates/main/navbar.html
@@ -1,4 +1,5 @@
-<script>
+<!--Script toggling active state of nav-items-->
+<script type="text/javascript">
   $(document).ready(function() {
   $('li.active').removeClass('active');
   console.log(location.pathname.substr(0, location.pathname.length - 1))
