--- a/main/templates/main/homepage.html
+++ b/main/templates/main/homepage.html
@@ -13,13 +13,15 @@
   <a class="btn btn-primary btn-lg" href="/recipes" role="button">Recipes</a>
   <hr class="my-4">
   <p>Got some food laying around and no idea how to combine it into tasty dinner? Add ingredients to a list and search for recipes fitting your needs.
+    Results page will underline items which you still need to acquire. In unlikely case that records do not sufficiently cover combination you are looking for
+    we will also show you some alternatives (partially matching your query).
     Don't forget to leave a comment with your review or suggestions afterwards!
   </p>
     <a class="btn btn-primary btn-lg" href="/ingredients" role="button">Ingredients</a>
   <hr class="my-4">
   <p>If you didn't find satisfying match and got creative on your own, please don't hesitate to save others from similar trouble. </p>
   Just take a quick photo of your delicious meal, enter quantities of already chosen ingredients and provide basic explanation of cooking process.
-  Good looking recipe with additional nutrition info is ready to share!
+  Good looking recipe with additional nutrition info is ready to share (or to remind yourself whenever your culinary muse is out of reach)!
 </div>
 
 {% endblock %}
