--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -57,7 +57,7 @@
     {% include "main/messages.html" %}
 
 
-    <div class="container">
+    <div class="container-fluid container-xl">
 
 
                 {% block content %}
