--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
-    <div class="col-6 mx-auto mt-3">
+    <div class="col col-sm-10 col-md-8 col-lg-6 mx-auto" style="margin-top:12rem;">
         <form method="POST" action="">
             {% csrf_token %}
             {{ form|crispy }}
