--- a/main/templates/main/navbar.html
+++ b/main/templates/main/navbar.html
@@ -8,7 +8,7 @@
 </script>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
-  <div class="container">
+  <div class="container-fluid container-xl">
     <a class="navbar-brand" href="/">Meal Configurator</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
 
       {% if request.path|slice:"10" == '/products/' %}
       <form method='GET' class="form-inline my-2 my-lg-0" action="/products">
-        <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search">
+        <input class="search-box form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" id="ING" type="submit" data-toggle="tooltip" data-placement="bottom" title="Search for ingredients!">Search</button>
       </form>
       <script type="text/javascript">
@@ -65,7 +65,7 @@
       </script>
       {% else %}
       <form method='GET' class="form-inline my-2 my-lg-0" action="/search">
-        <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search">
+        <input class="search-box form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit" >Search</button>
       </form>
 
