--- a/main/templates/main/recipes.html
+++ b/main/templates/main/recipes.html
@@ -3,16 +3,20 @@
 
 {% block content %}
 {% load static %}
+
 {% if query %}
 
     <div class='row title-row my-5'>
         <div class='col-12 py-0 mx-auto'>
-            <h3 class='my-0 py-0'>{{ count }} results for <b>{{ query }}</b></h3>
+            {% if counter == 1 %}
+                <h3 class='my-0 py-0'>{{ count }} results for <b>{{ query }}</b></h3>
+            {% else %}
+                <h3 class='my-0 py-0'>{{ count }} results for <b>{{ query }}</b></h3>
+            {% endif %}
         </div>
     </div>
 
 {% endif %}
-
 
 <form method="get" action="">
     <div class="form-row mb-3">
@@ -49,16 +53,16 @@
 </form>
 
 <div class="row">
-    <div class="card-columns" style="column-count:2;">
+    <div class="card-columns">
     {% for recipe in recipes %}
 
-    <div class="col-mb-5 mx-auto">
+    <div class="col mx-auto">
         <div class="card mb-3 mr-3">
           <div class="row no-gutters">
-            <div class="col-md-6 my-auto">
+            <div class="col-sm-6 my-auto">
               <img src="{{recipe.recipe_image.url}}" class="card-img">
             </div>
-            <div class="col-md-6">
+            <div class="col-sm-6">
               <div class="card-body">
                 <h4 class="card-title">{{recipe.recipe_name}}</h4>
                   <p>{{recipe.recipe_posted}}</p>
