--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-    <div class="col-6 mx-auto mt-3">
+    <div class="col col-sm-10 col-md-6  mx-auto mt-5">
         <form method="POST" action=".">
             {% csrf_token %}
             {% for field in form %}
