Update heroku app

--- a/main/templates/main/homepage.html
+++ b/main/templates/main/homepage.html
@@ -21,7 +21,7 @@
   <hr class="my-4">
   <p>If you didn't find satisfying match and got creative on your own, please don't hesitate to save others from similar trouble. </p>
   Just take a quick photo of your delicious meal, enter quantities of already chosen ingredients and provide basic explanation of cooking process.
-  Good looking recipe with additional nutrition info is ready to share (or to remind yourself whenever your culinary muse is out of reach)!
+  Good looking recipe with additional nutrition info is ready to share (or to remind yourself, whenever your culinary muse is out of reach)!
 </div>
 
 {% endblock %}
