Restructure static folder

--- a/main/templates/main/addrecipe.html
+++ b/main/templates/main/addrecipe.html
@@ -153,6 +153,6 @@
 
 <!--Script managing dynamic adding/removing formset rows. Second functionality is to modify new formset queryset
     to exclude already chosen ingredients. Corresponding views: update_session and update_options. -->
-<script src="{% static 'js/recipeForm.js' %}"></script>
+<script src="{% static 'main/js/recipeForm.js' %}"></script>
 
 {% endblock %}
