--- a/main/templates/main/recipe_details.html
+++ b/main/templates/main/recipe_details.html
@@ -66,7 +66,7 @@
 
 </div>
 
-<script src="{% static 'js/recipeDetails.js' %}"></script>
+<script src="{% static 'main/js/recipeDetails.js' %}"></script>
     <script>
 var ctx = document.getElementById('myChart').getContext('2d');
 var myChart = new Chart(ctx, {
