--- a/main/templates/main/recipe_details.html
+++ b/main/templates/main/recipe_details.html
@@ -50,7 +50,7 @@
 </div>
 
 <div class="col-12 col-sm-8 order-1 order-sm-2">
-    <img src="{{recipe.recipe_image.url}}" class="img-fluid mx-auto mt-3 d-block" >
+    <img src="{{recipe.recipe_image.url}}" class="img-fluid mx-auto my-3 d-block" >
     <h1>{{recipe.recipe_name}}</h1>
     <div class="ingredient-section-small">
         {% include 'main/ingredient_section.html' %}
