--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!--My CSS -->
-    <link rel="stylesheet" href="{% static 'main/css/responsive.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/responsive.css' %}">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
@@ -23,33 +23,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <title>MC</title>
     {{ form.media }}
-    <style>
-      html {
-        height: 100%;
-        box-sizing: border-box;
-      }
-      body {
-        position: relative;
-        margin: 0;
-        padding-bottom: 11rem;
-        min-height: 100%;
-      }
-      *,
-      *:before,
-      *:after {
-      box-sizing: inherit;
-      }
 
-      .footer {
-        position: absolute;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        background-color: #5ce6a3;
-        padding: 1rem;
-        text-align: center;
-      }
-    </style>
   </head>
   <body>
 
