--- a/main/templates/main/recipes.html
+++ b/main/templates/main/recipes.html
@@ -62,7 +62,7 @@
         <button type="submit" class="btn btn-outline-secondary mx-auto">Apply</button>
     </div>
 </form>
-{% else %}
+{% elif count == 0 %}
 
     <h3> Use other keywords or try searching recipes by ingrediends.</h3>
 
