--- a/static/main/css/responsive.css
+++ b/static/main/css/responsive.css
@@ -33,6 +33,12 @@
     .ingredient-section-standard{
         display: None;
     }
+    #explanation {
+        font-size: 2.7vw;
+    }
+    #question {
+        font-size: 4vw;
+    }
 }
 @media (min-width: 576px) {
     .card-columns {
@@ -74,6 +80,12 @@
     .search-box{
         width: 190px !important;
     }
+    #explanation {
+        font-size: 1rem;
+    }
+    #question {
+        font-size: 1.5rem;
+    }
 }
 @media (min-width: 768px) {
     .card-columns {
@@ -92,6 +104,12 @@
     }
     #rc2 {
         display: None;
+    }
+    #explanation{
+        font-size: 1.4rem;
+    }
+    #question {
+        font-size: 2.2rem;
     }
 }
 @media (min-width: 992px) {
@@ -116,6 +134,12 @@
     .list-item{
         margin-bottom:1rem;
     }
+    #explanation{
+        font-size: 1.8rem;
+    }
+    #question {
+        font-size: 2.8rem;
+    }
 }
 
 @media (min-width: 1200px) {
@@ -128,6 +152,12 @@
     }
     .title{
         font-size: 2.5rem;
+    }
+    #explanation{
+        font-size: 2rem;
+    }
+    #question {
+        font-size: 3rem;
     }
 }
 @media {
@@ -197,9 +227,8 @@
         top:65%;
         padding-left:20px;
         padding-right:20px;
-        font-size: 2rem;
         font-family:Serif;
-
+        text-shadow: white 0px 0px 20px;
     }
     @keyframes moveQ{
         from {left: 20%; opacity: 0;}
@@ -213,11 +242,8 @@
         transform: translate(-50%, -50%);
         overflow:hidden;
         opacity:0;
-        font-size: 3rem;
         font-family:Serif;
         animation-duration: 3s;
         animation-fill-mode: forwards;
-
     }
-
 }
