delete unnecessary code in forms/views and configure separate email

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -43,7 +43,7 @@
 
     <div class="footer">
       <p>Jakub Wronka</p>
-      <p>wrokuj@gmail.com</p>
+      <p>wroku.dev@gmail.com</p>
       <p>+48 664 431 828</p>
     </div>
     <div>
