--- a/main/templates/main/chart.html
+++ b/main/templates/main/chart.html
@@ -1,9 +1,9 @@
 {% extends 'main/base.html' %}
-
+{% load  static %}
 {% block content %}
 <div class="container">
 <div class="row">
-    <div class="col-sm-12" >
+    <div class="col-sm-7" >
         <canvas id="gameCanvas" width="500px" height="560px" style="border:1px solid #000"></canvas>
         <!-- <canvas id="myChart" width="400" height="400"></canvas> -->
         <canvas id="myCanvas" width="200px" height="200px" style="border:1px solid #000"></canvas>
