Almost finished test_vievs suite

--- a/main/templates/main/products.html
+++ b/main/templates/main/products.html
@@ -58,7 +58,9 @@
         </div>
         {% endfor %}
 
-    {% include 'main/ingredient_list.html' %}
+    {% if added %}
+        {% include 'main/ingredient_list.html' %}
+    {% endif %}
 </div>
 
 
