Add functional test suite and fix some bugs.

--- a/main/templates/main/recipe_details.html
+++ b/main/templates/main/recipe_details.html
@@ -38,7 +38,7 @@
 
     </ul>
     <br>
-    <ul class="list-group mb-3">
+    <ul class="list-group my-3">
         <li class="list-group-item text-center" style="background-color: rgba(237, 237, 237, 0.8)"><strong>Macronutrients profile [1 serving]</strong></li>
         <li class="list-group-item"><canvas id="myChart" width="10" height="10"></canvas></li>
     </ul>
