Functional tests part n

--- a/main/templates/main/homepage.html
+++ b/main/templates/main/homepage.html
@@ -49,7 +49,7 @@
   </a>
 </div>
   <hr class="my-5">
-  <p style="font-size:1.3rem">If you didn't find satisfying match and got creative on your own, please, don't hesitate to save others from similar trouble. </p>
+  <p style="font-size:1.3rem">If you didn't find satisfying match and got creative on your own, don't hesitate to save others from similar trouble. </p>
   <p style="font-size:1.1rem">Just take a quick photo of your delicious meal, enter quantities of already chosen ingredients and provide basic explanation of cooking process.
     Good looking recipe with additional nutrition info is ready to share (or to remind yourself, whenever your culinary muse is out of reach)!</p>
   <div class="row">
