--- a/main/templates/main/recipes.html
+++ b/main/templates/main/recipes.html
@@ -77,11 +77,11 @@
         <div class="card mb-3 mr-3">
           <div class="row no-gutters">
             <div class="col-sm-6 my-auto">
-              <img src="{{recipe.recipe_image.url}}" class="card-img">
+                <a href="/recipes/{{recipe.recipe_slug}}"><img src="{{recipe.recipe_image.url}}" class="card-img"></a>
             </div>
             <div class="col-sm-6">
               <div class="card-body">
-                <h4 class="card-title">{{recipe.recipe_name}}</h4>
+                  <h4 class="card-title"><a href="/recipes/{{recipe.recipe_slug}}" style="color:black;">{{recipe.recipe_name}}</a></h4>
                   <p>{{recipe.recipe_posted}}</p>
                   <p class="card-text text-muted">Caloric value : <b>{{ recipe.calories_per_serving}}</b> cal/serving</p>
                   <p class="card-text text-muted">Price : <b>{{recipe.price_per_serving}}</b> pln/serving</p>
