--- a/main/templates/main/recipes_containing.html
+++ b/main/templates/main/recipes_containing.html
@@ -7,7 +7,7 @@
 {% for data, query, counter in recipes %}
 
 {% if forloop.counter0 == 0 %}
-<h5 class="my-5"> *You can also look for recipes with particular title lub keywords, for this purpose use search box above. </h5>
+<h5 class="my-5"> *You can also look for recipes with particular title or keywords, for this purpose use search box above. </h5>
 {% endif %}
 
 {% if forloop.counter0 == 1 %}
